[package]
name = "tokio-tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.27.0", features=["full"]}
native-tls = "0.2.11"
tokio-rustls = "0.24.0"
webpki = "0.22.0"
tokio-native-tls = "0.3.1"
async-socks5 = "0.5.1"